text_processing_modified

--- a/analysis.ipynb
+++ b/analysis.ipynb
@@ -276,6 +276,175 @@
     "print(f\"Sector: {company_sector}\")\n",
     "print(f\"Stock Price: {stock_price}\")\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Calculate daily returns\n",
+    "stock_returns = stock_data['Adj Close'].pct_change().dropna()\n",
+    "market_returns = market_data['Adj Close'].pct_change().dropna()\n",
+    "\n",
+    "# Estimate the market model (CAPM) during the estimation window\n",
+    "estimation_window = (stock_returns.index >= estimation_window_start) & (stock_returns.index <= estimation_window_end)\n",
+    "X = sm.add_constant(market_returns[estimation_window])  # Market returns\n",
+    "y = stock_returns[estimation_window]  # Stock returns\n",
+    "model = sm.OLS(y, X).fit()\n",
+    "\n",
+    "# Calculate expected and abnormal returns during the event window\n",
+    "event_window = (stock_returns.index >= event_window_start) & (stock_returns.index <= event_window_end)\n",
+    "expected_returns = model.params[0] + model.params[1] * market_returns[event_window]\n",
+    "abnormal_returns = stock_returns[event_window] - expected_returns\n",
+    "\n",
+    "# Output the results\n",
+    "print(abnormal_returns)\n",
+    "\n",
+    "# Plotting the abnormal returns\n",
+    "plt.figure(figsize=(12, 6))\n",
+    "abnormal_returns.plot()\n",
+    "plt.title(f'Abnormal Returns for {stock_ticker} Around the Event')\n",
+    "plt.xlabel('Date')\n",
+    "plt.ylabel('Abnormal Return')\n",
+    "plt.axvline(x=event_date, color='red', linestyle='--')  # Event date line\n",
+    "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\n",
+    "# Define the stock and market index\n",
+    "stock_ticker = 'AAPL'  # Example: Apple Inc.\n",
+    "market_index_ticker = '^GSPC'  # Example: S&P 500\n",
+    "\n",
+    "# Define the event date and windows\n",
+    "event_date = datetime(2020, 1, 1)\n",
+    "estimation_window_start = event_date - timedelta(days=365)\n",
+    "estimation_window_end = event_date - timedelta(days=30)\n",
+    "event_window_start = event_date - timedelta(days=10)\n",
+    "event_window_end = event_date + timedelta(days=10)\n",
+    "\n",
+    "# Fetch historical data\n",
+    "stock_data = yf.download(stock_ticker, start=estimation_window_start, end=event_window_end)\n",
+    "market_data = yf.download(market_index_ticker, start=estimation_window_start, end=event_window_end)\n",
+    "\n",
+    "\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\n",
+    "def run_event_study(stock_ticker, event_date):\n",
+    "    # # Define the market index\n",
+    "    # market_index_ticker = '^GSPC'  # S&P 500\n",
+    "\n",
+    "    # # Define windows\n",
+    "    # estimation_window_start = event_date - timedelta(days=365)\n",
+    "    # estimation_window_end = event_date - timedelta(days=30)\n",
+    "    # event_window_start = event_date - timedelta(days=10)\n",
+    "    # event_window_end = event_date + timedelta(days=10)\n",
+    "\n",
+    "    # # Fetch historical data\n",
+    "    # stock_data = yf.download(stock_ticker, start=estimation_window_start, end=event_window_end)\n",
+    "    # stock_data['Ticker'] = stock_ticker\n",
+    "    # market_data = yf.download(market_index_ticker, start=estimation_window_start, end=event_window_end)\n",
+    "    # stock_data.to_csv('stock_data.csv')\n",
+    "    # market_data.to_csv('market_data.csv')\n",
+    "\n",
+    "    estimation_window_start = event_date - timedelta(days=365)\n",
+    "    estimation_window_end = event_date - timedelta(days=30)\n",
+    "    event_window_start = event_date - timedelta(days=10)\n",
+    "    event_window_end = event_date + timedelta(days=10)\n",
+    "\n",
+    "    # Fetch historical data for the stock\n",
+    "    stock_data = yf.download(stock_ticker, start=estimation_window_start, end=event_window_end)\n",
+    "    stock_data['Ticker'] = stock_ticker\n",
+    "\n",
+    "    # Save the stock data to a CSV file\n",
+    "    stock_data.to_csv('stock_data.csv')\n",
+    "\n",
+    "    # Calculate daily returns\n",
+    "    stock_returns = stock_data['Adj Close'].pct_change().dropna()\n",
+    "    market_returns = market_data['Adj Close'].pct_change().dropna()\n",
+    "\n",
+    "    # Estimate the market model during the estimation window\n",
+    "    estimation_window = (stock_returns.index >= estimation_window_start) & (stock_returns.index <= estimation_window_end)\n",
+    "    X = sm.add_constant(market_returns[estimation_window])\n",
+    "    y = stock_returns[estimation_window]\n",
+    "    model = sm.OLS(y, X).fit()\n",
+    "\n",
+    "    # Calculate expected and abnormal returns during the event window\n",
+    "    event_window = (stock_returns.index >= event_window_start) & (stock_returns.index <= event_window_end)\n",
+    "    expected_returns = model.params[0] + model.params[1] * market_returns[event_window]\n",
+    "    abnormal_returns = stock_returns[event_window] - expected_returns\n",
+    "\n",
+    "    # Calculate the average abnormal return\n",
+    "    average_abnormal_return = abnormal_returns.mean()\n",
+    "\n",
+    "    # # Plotting\n",
+    "    # plt.figure(figsize=(12, 6))\n",
+    "    # abnormal_returns.plot(title=f'Abnormal Returns for {stock_ticker} Around the Event')\n",
+    "    # plt.axvline(x=event_date, color='red', linestyle='--')  # Event date line\n",
+    "    # plt.axhline(y=average_abnormal_return, color='blue', linestyle='--', label='Average Abnormal Return')  # Average line\n",
+    "    # plt.xlabel('Date')\n",
+    "    # plt.ylabel('Abnormal Return')\n",
+    "    # plt.legend()\n",
+    "    # plt.show()\n",
+    "\n",
+    "    # Display the average abnormal return\n",
+    "    print(f\"Average Abnormal Return for {stock_ticker}: {average_abnormal_return}\")\n",
+    "\n",
+    "    return abnormal_returns\n",
+    "# def run_event_study(stock_ticker, event_date):\n",
+    "#     # [Previous code parts remain unchanged]\n",
+    "\n",
+    "#     # Return the abnormal returns\n",
+    "#     return abnormal_returns\n",
+    "\n",
+    "\n",
+    "stock_list = ['ATUS', 'AFTM', 'ATUS']  # List of stocks to analyze\n",
+    "event_date = datetime(2018, 6, 28)  # Example event date\n",
+    "\n",
+    "\n",
+    "all_abnormal_returns = {}\n",
+    "\n",
+    "for stock in stock_list:\n",
+    "    print(f\"Event study for {stock}:\")\n",
+    "    all_abnormal_returns[stock] = run_event_study(stock, event_date)\n",
+    "\n",
+    "\n",
+    "average_abnormal_returns = pd.concat(all_abnormal_returns, axis=1).mean(axis=1)\n",
+    "\n",
+    "\n",
+    "std_error = pd.concat(all_abnormal_returns, axis=1).std(axis=1) / np.sqrt(len(stock_list))\n",
+    "\n",
+    "# Determine the t-statistic for a 95% confidence interval\n",
+    "t_stat = t.ppf(1-0.025, df=len(stock_list)-1)\n",
+    "\n",
+    "# Calculate the confidence intervals\n",
+    "ci_lower = average_abnormal_returns - (t_stat * std_error)\n",
+    "ci_upper = average_abnormal_returns + (t_stat * std_error)\n",
+    "\n",
+    "# Plotting\n",
+    "plt.figure(figsize=(12, 6))\n",
+    "average_abnormal_returns.plot(title='Average Abnormal Returns with 95% Confidence Interval Across AAPL, MSFT, GOOGL Around the Event')\n",
+    "plt.fill_between(average_abnormal_returns.index, ci_lower, ci_upper, color='grey', alpha=0.3, label='95% Confidence Interval')\n",
+    "plt.axvline(x=event_date, color='red', linestyle='--')  # Event date line\n",
+    "plt.xlabel('Date')\n",
+    "plt.ylabel('Average Abnormal Return')\n",
+    "plt.legend()\n",
+    "plt.show()\n"
+   ]
   }
  ],
  "metadata": {
