--- a/data_wrangling.ipynb
+++ b/data_wrangling.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -17,52 +17,104 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
-    "\n",
-    "# Define the stock and market index\n",
-    "stock_ticker = 'AAPL'  # Example: Apple Inc.\n",
-    "market_index_ticker = '^GSPC'  # Example: S&P 500\n",
-    "\n",
-    "# Define the event date and windows\n",
-    "event_date = datetime(2020, 1, 1)\n",
+    "event_date = datetime(2018, 6, 28)\n",
     "estimation_window_start = event_date - timedelta(days=365)\n",
     "estimation_window_end = event_date - timedelta(days=30)\n",
     "event_window_start = event_date - timedelta(days=10)\n",
     "event_window_end = event_date + timedelta(days=10)\n",
+    "stock_list = ['ATUS', 'AFTM', 'ATUS','AAPL']  # List of stocks to analyze\n",
     "\n",
-    "# Fetch historical data\n",
-    "stock_data = yf.download(stock_ticker, start=estimation_window_start, end=event_window_end)\n",
-    "market_data = yf.download(market_index_ticker, start=estimation_window_start, end=event_window_end)\n",
+    "# # Fetch historical data for the stocks\n",
+    "# stock_data = yf.download(stock_list, start=estimation_window_start, end=event_window_end)\n",
     "\n",
-    "# Calculate daily returns\n",
-    "stock_returns = stock_data['Adj Close'].pct_change().dropna()\n",
-    "market_returns = market_data['Adj Close'].pct_change().dropna()\n",
+    "# # Save the stock data to a CSV file\n",
+    "# stock_data.to_csv('stock_data.csv')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "combined_data = pd.DataFrame()\n",
     "\n",
-    "# Estimate the market model (CAPM) during the estimation window\n",
-    "estimation_window = (stock_returns.index >= estimation_window_start) & (stock_returns.index <= estimation_window_end)\n",
-    "X = sm.add_constant(market_returns[estimation_window])  # Market returns\n",
-    "y = stock_returns[estimation_window]  # Stock returns\n",
-    "model = sm.OLS(y, X).fit()\n",
+    "# Fetch historical data and additional company information for each stock\n",
+    "for ticker in stock_list:\n",
+    "    stock = yf.Ticker(ticker)\n",
+    "    \n",
+    "    # Fetch historical stock data\n",
+    "    historical_data = stock.history(start=estimation_window_start, end=event_window_end)\n",
+    "    historical_data['Ticker'] = ticker\n",
     "\n",
-    "# Calculate expected and abnormal returns during the event window\n",
-    "event_window = (stock_returns.index >= event_window_start) & (stock_returns.index <= event_window_end)\n",
-    "expected_returns = model.params[0] + model.params[1] * market_returns[event_window]\n",
-    "abnormal_returns = stock_returns[event_window] - expected_returns\n",
+    "    # Fetch additional company information\n",
+    "    info = stock.info\n",
+    "    # revenue = info.get('revenue', 'N/A')\n",
+    "    market_cap = info.get('marketCap', 'N/A')\n",
     "\n",
-    "# Output the results\n",
-    "print(abnormal_returns)\n",
+    "    # Add the additional information to the historical data\n",
+    "    # historical_data['Revenue'] = revenue\n",
+    "    historical_data['MarketCap'] = market_cap\n",
     "\n",
-    "# Plotting the abnormal returns\n",
-    "plt.figure(figsize=(12, 6))\n",
-    "abnormal_returns.plot()\n",
-    "plt.title(f'Abnormal Returns for {stock_ticker} Around the Event')\n",
-    "plt.xlabel('Date')\n",
-    "plt.ylabel('Abnormal Return')\n",
-    "plt.axvline(x=event_date, color='red', linestyle='--')  # Event date line\n",
-    "plt.show()"
+    "    # Append this stock's data to the combined DataFrame\n",
+    "    combined_data = pd.concat([combined_data, historical_data])\n",
+    "\n",
+    "# Save the combined data to a CSV file\n",
+    "combined_data.to_csv('combined_stock_data2.csv')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[0.     0.1825 0.1925]\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Initialize an empty DataFrame to store combined data\n",
+    "combined_data = pd.DataFrame()\n",
+    "\n",
+    "# Fetch historical data and additional company information for each stock\n",
+    "for ticker in stock_list:\n",
+    "    stock = yf.Ticker(ticker)\n",
+    "    \n",
+    "    # Fetch historical stock data including dividends and stock splits\n",
+    "    historical_data = stock.history(start=estimation_window_start, end=event_window_end, actions=True)\n",
+    "    historical_data['Ticker'] = ticker\n",
+    "\n",
+    "    # Append this stock's data to the combined DataFrame\n",
+    "    combined_data = pd.concat([combined_data, historical_data])\n",
+    "\n",
+    "# Save the combined data to a CSV file\n",
+    "combined_data.to_csv('combined_stock_data_with_dividends.csv')\n",
+    "\n",
+    "print(combined_data['Dividends'].unique())\n",
+    "# combined_data = pd.DataFrame()\n",
+    "\n",
+    "# # Fetch historical data and additional company information for each stock\n",
+    "# for ticker in stock_list:\n",
+    "#     stock = yf.Ticker(ticker)\n",
+    "    \n",
+    "#     # Fetch historical stock data\n",
+    "#     historical_data = stock.history(start=estimation_window_start, end=event_window_end)\n",
+    "#     historical_data['Ticker'] = ticker\n",
+    "\n",
+    "\n",
+    "#     # Append this stock's data to the combined DataFrame\n",
+    "#     combined_data = pd.concat([combined_data, historical_data])\n",
+    "\n",
+    "# # Save the combined data to a CSV file\n",
+    "# combined_data.to_csv('combined_stock_data.csv')"
    ]
   },
   {
@@ -71,92 +123,35 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "    # # Fetch additional company information\n",
+    "    # info = stock.info\n",
+    "    # revenue = info.get('revenue', 'N/A')\n",
+    "    # market_cap = info.get('marketCap', 'N/A')\n",
+    "    # net_income = info.get('netIncome', 'N/A') \n",
     "\n",
-    "def run_event_study(stock_ticker, event_date):\n",
-    "    # Define the market index\n",
-    "    market_index_ticker = '^GSPC'  # S&P 500\n",
-    "\n",
-    "    # Define windows\n",
-    "    estimation_window_start = event_date - timedelta(days=365)\n",
-    "    estimation_window_end = event_date - timedelta(days=30)\n",
-    "    event_window_start = event_date - timedelta(days=10)\n",
-    "    event_window_end = event_date + timedelta(days=10)\n",
-    "\n",
-    "    # Fetch historical data\n",
-    "    stock_data = yf.download(stock_ticker, start=estimation_window_start, end=event_window_end)\n",
-    "    market_data = yf.download(market_index_ticker, start=estimation_window_start, end=event_window_end)\n",
-    "\n",
-    "    # Calculate daily returns\n",
-    "    stock_returns = stock_data['Adj Close'].pct_change().dropna()\n",
-    "    market_returns = market_data['Adj Close'].pct_change().dropna()\n",
-    "\n",
-    "    # Estimate the market model during the estimation window\n",
-    "    estimation_window = (stock_returns.index >= estimation_window_start) & (stock_returns.index <= estimation_window_end)\n",
-    "    X = sm.add_constant(market_returns[estimation_window])\n",
-    "    y = stock_returns[estimation_window]\n",
-    "    model = sm.OLS(y, X).fit()\n",
-    "\n",
-    "    # Calculate expected and abnormal returns during the event window\n",
-    "    event_window = (stock_returns.index >= event_window_start) & (stock_returns.index <= event_window_end)\n",
-    "    expected_returns = model.params[0] + model.params[1] * market_returns[event_window]\n",
-    "    abnormal_returns = stock_returns[event_window] - expected_returns\n",
-    "\n",
-    "    # Calculate the average abnormal return\n",
-    "    average_abnormal_return = abnormal_returns.mean()\n",
-    "\n",
-    "    # # Plotting\n",
-    "    # plt.figure(figsize=(12, 6))\n",
-    "    # abnormal_returns.plot(title=f'Abnormal Returns for {stock_ticker} Around the Event')\n",
-    "    # plt.axvline(x=event_date, color='red', linestyle='--')  # Event date line\n",
-    "    # plt.axhline(y=average_abnormal_return, color='blue', linestyle='--', label='Average Abnormal Return')  # Average line\n",
-    "    # plt.xlabel('Date')\n",
-    "    # plt.ylabel('Abnormal Return')\n",
-    "    # plt.legend()\n",
-    "    # plt.show()\n",
-    "\n",
-    "    # Display the average abnormal return\n",
-    "    print(f\"Average Abnormal Return for {stock_ticker}: {average_abnormal_return}\")\n",
-    "\n",
-    "    return abnormal_returns\n",
-    "# def run_event_study(stock_ticker, event_date):\n",
-    "#     # [Previous code parts remain unchanged]\n",
-    "\n",
-    "#     # Return the abnormal returns\n",
-    "#     return abnormal_returns\n",
-    "\n",
-    "# Example usage\n",
-    "stock_list = ['AAPL', 'MSFT', 'GOOGL']  # List of stocks to analyze\n",
-    "event_date = datetime(2018, 6, 28)  # Example event date\n",
-    "\n",
-    "# Dictionary to hold abnormal returns for each stock\n",
-    "all_abnormal_returns = {}\n",
-    "\n",
-    "for stock in stock_list:\n",
-    "    print(f\"Event study for {stock}:\")\n",
-    "    all_abnormal_returns[stock] = run_event_study(stock, event_date)\n",
-    "\n",
-    "# Calculate average abnormal returns across stocks for each day\n",
-    "average_abnormal_returns = pd.concat(all_abnormal_returns, axis=1).mean(axis=1)\n",
-    "\n",
-    "# Calculate the standard error of the average abnormal returns\n",
-    "std_error = pd.concat(all_abnormal_returns, axis=1).std(axis=1) / np.sqrt(len(stock_list))\n",
-    "\n",
-    "# Determine the t-statistic for a 95% confidence interval\n",
-    "t_stat = t.ppf(1-0.025, df=len(stock_list)-1)\n",
-    "\n",
-    "# Calculate the confidence intervals\n",
-    "ci_lower = average_abnormal_returns - (t_stat * std_error)\n",
-    "ci_upper = average_abnormal_returns + (t_stat * std_error)\n",
-    "\n",
-    "# Plotting\n",
-    "plt.figure(figsize=(12, 6))\n",
-    "average_abnormal_returns.plot(title='Average Abnormal Returns with 95% Confidence Interval Across AAPL, MSFT, GOOGL Around the Event')\n",
-    "plt.fill_between(average_abnormal_returns.index, ci_lower, ci_upper, color='grey', alpha=0.3, label='95% Confidence Interval')\n",
-    "plt.axvline(x=event_date, color='red', linestyle='--')  # Event date line\n",
-    "plt.xlabel('Date')\n",
-    "plt.ylabel('Average Abnormal Return')\n",
-    "plt.legend()\n",
-    "plt.show()\n"
+    "    # # Add the additional information to the historical data\n",
+    "    # historical_data['Revenue'] = revenue\n",
+    "    # historical_data['MarketCap'] = market_cap\n",
+    "    # historical_data['NetIncome'] = net_income\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'address1': 'One Apple Park Way', 'city': 'Cupertino', 'state': 'CA', 'zip': '95014', 'country': 'United States', 'phone': '408 996 1010', 'website': 'https://www.apple.com', 'industry': 'Consumer Electronics', 'industryKey': 'consumer-electronics', 'industryDisp': 'Consumer Electronics', 'sector': 'Technology', 'sectorKey': 'technology', 'sectorDisp': 'Technology', 'longBusinessSummary': 'Apple Inc. designs, manufactures, and markets smartphones, personal computers, tablets, wearables, and accessories worldwide. The company offers iPhone, a line of smartphones; Mac, a line of personal computers; iPad, a line of multi-purpose tablets; and wearables, home, and accessories comprising AirPods, Apple TV, Apple Watch, Beats products, and HomePod. It also provides AppleCare support and cloud services; and operates various platforms, including the App Store that allow customers to discover and download applications and digital content, such as books, music, video, games, and podcasts. In addition, the company offers various services, such as Apple Arcade, a game subscription service; Apple Fitness+, a personalized fitness service; Apple Music, which offers users a curated listening experience with on-demand radio stations; Apple News+, a subscription news and magazine service; Apple TV+, which offers exclusive original content; Apple Card, a co-branded credit card; and Apple Pay, a cashless payment service, as well as licenses its intellectual property. The company serves consumers, and small and mid-sized businesses; and the education, enterprise, and government markets. It distributes third-party applications for its products through the App Store. The company also sells its products through its retail and online stores, and direct sales force; and third-party cellular network carriers, wholesalers, retailers, and resellers. Apple Inc. was founded in 1976 and is headquartered in Cupertino, California.', 'fullTimeEmployees': 161000, 'companyOfficers': [{'maxAge': 1, 'name': 'Mr. Timothy D. Cook', 'age': 61, 'title': 'CEO & Director', 'yearBorn': 1961, 'fiscalYear': 2022, 'totalPay': 16425933, 'exercisedValue': 0, 'unexercisedValue': 0}, {'maxAge': 1, 'name': 'Mr. Luca  Maestri', 'age': 59, 'title': 'CFO & Senior VP', 'yearBorn': 1963, 'fiscalYear': 2022, 'totalPay': 5019783, 'exercisedValue': 0, 'unexercisedValue': 0}, {'maxAge': 1, 'name': 'Mr. Jeffrey E. Williams', 'age': 58, 'title': 'Chief Operating Officer', 'yearBorn': 1964, 'fiscalYear': 2022, 'totalPay': 5018337, 'exercisedValue': 0, 'unexercisedValue': 0}, {'maxAge': 1, 'name': 'Ms. Katherine L. Adams', 'age': 58, 'title': 'Senior VP, General Counsel & Secretary', 'yearBorn': 1964, 'fiscalYear': 2022, 'totalPay': 5015208, 'exercisedValue': 0, 'unexercisedValue': 0}, {'maxAge': 1, 'name': \"Ms. Deirdre  O'Brien\", 'age': 55, 'title': 'Senior Vice President of Retail', 'yearBorn': 1967, 'fiscalYear': 2022, 'totalPay': 5019783, 'exercisedValue': 0, 'unexercisedValue': 0}, {'maxAge': 1, 'name': 'Mr. Chris  Kondo', 'title': 'Senior Director of Corporate Accounting', 'fiscalYear': 2022, 'exercisedValue': 0, 'unexercisedValue': 0}, {'maxAge': 1, 'name': 'Mr. James  Wilson', 'title': 'Chief Technology Officer', 'fiscalYear': 2022, 'exercisedValue': 0, 'unexercisedValue': 0}, {'maxAge': 1, 'name': 'Ms. Mary  Demby', 'title': 'Chief Information Officer', 'fiscalYear': 2022, 'exercisedValue': 0, 'unexercisedValue': 0}, {'maxAge': 1, 'name': 'Suhasini  Chandramouli', 'title': 'Director of Investor Relations', 'fiscalYear': 2022, 'exercisedValue': 0, 'unexercisedValue': 0}, {'maxAge': 1, 'name': 'Mr. Greg  Joswiak', 'title': 'Senior Vice President of Worldwide Marketing', 'fiscalYear': 2022, 'exercisedValue': 0, 'unexercisedValue': 0}], 'auditRisk': 4, 'boardRisk': 1, 'compensationRisk': 6, 'shareHolderRightsRisk': 1, 'overallRisk': 1, 'governanceEpochDate': 1701388800, 'compensationAsOfEpochDate': 1672444800, 'maxAge': 86400, 'priceHint': 2, 'previousClose': 189.95, 'open': 190.33, 'dayLow': 189.23, 'dayHigh': 191.555, 'regularMarketPreviousClose': 189.95, 'regularMarketOpen': 190.33, 'regularMarketDayLow': 189.23, 'regularMarketDayHigh': 191.555, 'dividendRate': 0.96, 'dividendYield': 0.005, 'exDividendDate': 1699574400, 'payoutRatio': 0.1533, 'fiveYearAvgDividendYield': 0.82, 'beta': 1.305, 'trailingPE': 31.146582, 'forwardPE': 26.746853, 'volume': 45704823, 'regularMarketVolume': 45704823, 'averageVolume': 57299031, 'averageVolume10days': 41568420, 'averageDailyVolume10Day': 41568420, 'bid': 191.3, 'ask': 191.33, 'bidSize': 3000, 'askSize': 800, 'marketCap': 2974317543424, 'fiftyTwoWeekLow': 124.17, 'fiftyTwoWeekHigh': 198.23, 'priceToSalesTrailing12Months': 7.7600675, 'fiftyDayAverage': 179.4516, 'twoHundredDayAverage': 175.26715, 'trailingAnnualDividendRate': 0.94, 'trailingAnnualDividendYield': 0.004948671, 'currency': 'USD', 'enterpriseValue': 3036683173888, 'profitMargins': 0.25305998, 'floatShares': 15535488445, 'sharesOutstanding': 15552799744, 'sharesShort': 105837123, 'sharesShortPriorMonth': 93026130, 'sharesShortPreviousMonthDate': 1697155200, 'dateShortInterest': 1700006400, 'sharesPercentSharesOut': 0.0068, 'heldPercentInsiders': 0.00071999995, 'heldPercentInstitutions': 0.61317, 'shortRatio': 1.81, 'shortPercentOfFloat': 0.0068, 'impliedSharesOutstanding': 15552799744, 'bookValue': 3.997, 'priceToBook': 47.845886, 'lastFiscalYearEnd': 1696032000, 'nextFiscalYearEnd': 1727654400, 'mostRecentQuarter': 1696032000, 'earningsQuarterlyGrowth': 0.108, 'netIncomeToCommon': 96995000320, 'trailingEps': 6.14, 'forwardEps': 7.15, 'pegRatio': 4.72, 'lastSplitFactor': '4:1', 'lastSplitDate': 1598832000, 'enterpriseToRevenue': 7.923, 'enterpriseToEbitda': 24.135, '52WeekChange': 0.3042351, 'SandP52WeekChange': 0.14899075, 'lastDividendValue': 0.24, 'lastDividendDate': 1699574400, 'exchange': 'NMS', 'quoteType': 'EQUITY', 'symbol': 'AAPL', 'underlyingSymbol': 'AAPL', 'shortName': 'Apple Inc.', 'longName': 'Apple Inc.', 'firstTradeDateEpochUtc': 345479400, 'timeZoneFullName': 'America/New_York', 'timeZoneShortName': 'EST', 'uuid': '8b10e4ae-9eeb-3684-921a-9ab27e4d87aa', 'messageBoardId': 'finmb_24937', 'gmtOffSetMilliseconds': -18000000, 'currentPrice': 191.24, 'targetHighPrice': 240.0, 'targetLowPrice': 159.0, 'targetMeanPrice': 198.01, 'targetMedianPrice': 200.0, 'recommendationMean': 2.1, 'recommendationKey': 'buy', 'numberOfAnalystOpinions': 39, 'totalCash': 61554999296, 'totalCashPerShare': 3.958, 'ebitda': 125820002304, 'totalDebt': 123930001408, 'quickRatio': 0.843, 'currentRatio': 0.988, 'totalRevenue': 383285002240, 'debtToEquity': 199.418, 'revenuePerShare': 24.344, 'returnOnAssets': 0.20256001, 'returnOnEquity': 1.7195, 'grossProfits': 170782000000, 'freeCashflow': 82179997696, 'operatingCashflow': 110543003648, 'earningsGrowth': 0.135, 'revenueGrowth': -0.007, 'grossMargins': 0.44131002, 'ebitdaMargins': 0.32827, 'operatingMargins': 0.30134, 'financialCurrency': 'USD', 'trailingPegRatio': 2.2549}\n"
+     ]
+    }
+   ],
+   "source": [
+    "stock = yf.Ticker('AAPL')\n",
+    "info = stock.info\n",
+    "print(info)  # Check the content of info\n"
    ]
   }
  ],
@@ -167,7 +162,15 @@
    "name": "python3"
   },
   "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
    "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
    "version": "3.11.6"
   }
  },
