data_wrangling keep index dates,remove duplicates

--- a/data_wrangling.ipynb
+++ b/data_wrangling.ipynb
@@ -7,10 +7,7 @@
    "outputs": [],
    "source": [
     "import pandas as pd\n",
-    "import numpy as np\n",
     "import yfinance as yf\n",
-    "import statsmodels.api as sm\n",
-    "import matplotlib.pyplot as plt\n",
     "import os\n",
     "import json\n",
     "from scipy.stats import t\n",
@@ -53,13 +50,13 @@
     "        stock = yf.Ticker(ticker)\n",
     "        \n",
     "        # Fetch historical stock data using yf.download\n",
-    "        historical_data_adjClose = yf.download(ticker, start=estimation_window_start, end=event_window_end) #retrieved dataframe that include adj close column\n",
+    "        historical_data_adjClose = yf.download(ticker, start=estimation_window_start, end=event_window_end) #retrieve dataframe that include adj close column\n",
     "        if historical_data_adjClose.empty:\n",
     "            print(f\"No data for {ticker} using yf.download for specified dates.\")\n",
     "            continue\n",
     "\n",
     "        # Fetch historical stock data using stock.history\n",
-    "        historical_data_dividend = stock.history(start=estimation_window_start, end=event_window_end) #retrieved dataframe that include dividend column\n",
+    "        historical_data_dividend = stock.history(start=estimation_window_start, end=event_window_end) #retrieve dataframe that include dividend column\n",
     "        if historical_data_dividend.empty:\n",
     "            print(f\"No data for {ticker} using stock.history for specified dates.\")\n",
     "            continue\n",
@@ -85,21 +82,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 84,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[*********************100%%**********************]  1 of 1 completed"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "\n"
+      "[*********************100%%**********************]  1 of 1 completed\n"
      ]
     }
    ],
@@ -125,7 +115,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 85,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [
     {
@@ -134,7 +124,7 @@
      "text": [
       "258\n",
       "98\n",
-      "19666\n"
+      "19663\n"
      ]
     }
    ],
@@ -149,7 +139,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 86,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -160,13 +150,12 @@
     "    sp500_data = json.load(file)\n",
     "sp500_tickers = sp500_data.get(\"2018/06/20\", []) #extract sp500 constitutes list at the most recent date of event_date (2018/6/28)\n",
     "merged_data['sp500'] = merged_data['ticker'].apply(lambda x: 1 if x in sp500_tickers else 0)\n",
-    "\n",
-    "merged_data.to_csv('combined_stock_data.csv')"
+    "\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 88,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [
     {
@@ -181,6 +170,27 @@
     "sp500_counts = merged_data['sp500'].value_counts()\n",
     "count_sp500_is_1 = sp500_counts.get(1, 0)\n",
     "print(\"Number of instances where sp500 equals 1:\", count_sp500_is_1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#remove all duplicates to make sure df is unqiue by ticker and also improve validity when doing further analysis \n",
+    "df_no_duplicates = df[~df.duplicated('ticker', keep=False)]\n",
+    "\n",
+    "\n",
+    "merged_data.reset_index(inplace=True)  # This will turn the index into a column\n",
+    "\n",
+    "\n",
+    "final_data = pd.merge(merged_data, df_no_duplicates, on='ticker', how='left')\n",
+    "\n",
+    "# Set the date back as the index of the final_data\n",
+    "final_data.set_index('date', inplace=True)\n",
+    "\n",
+    "final_data.to_csv('combined_stock_data.csv')"
    ]
   }
  ],
